fix catch-throws bean-post-processor